<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90ee90"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:textSize="60sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/border"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/frame" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/competitors"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/player1"
        app:layout_constraintLeft_toLeftOf="@id/border"
        app:layout_constraintRight_toRightOf="@id/border"
        app:layout_constraintTop_toTopOf="@+id/border" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintRight_toRightOf="@id/border"
        app:layout_constraintLeft_toLeftOf="@id/border"
        app:layout_constraintBottom_toTopOf="@+id/player2"
        app:layout_constraintTop_toBottomOf="@id/player1"/>

    <EditText
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/player_1"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/border"
        app:layout_constraintLeft_toLeftOf="@id/border"
        app:layout_constraintRight_toRightOf="@id/border"
        app:layout_constraintTop_toTopOf="@id/border"
        app:layout_constraintVertical_bias="0.39" />

    <EditText
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/player_2"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/border"
        app:layout_constraintLeft_toLeftOf="@id/border"
        app:layout_constraintRight_toRightOf="@id/border"
        app:layout_constraintTop_toBottomOf="@id/player1"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green"
        android:text="@string/start"
        android:textColor="@color/black"
        android:onClick="start"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@id/border"
        app:layout_constraintRight_toRightOf="@id/border"
        app:layout_constraintTop_toBottomOf="@id/player2"
        app:layout_constraintBottom_toBottomOf="@id/border"/>
</androidx.constraintlayout.widget.ConstraintLayout>