<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/turnBoard"
        android:layout_width="240dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="#D3AC72"
        android:textColor="#5A4629"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:id="@+id/board"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/board"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turnBoard"
        android:contentDescription="@string/tic_tac_toe_board" />

    <ImageView
        android:id="@+id/pos1"
        android:layout_width="100dp"
        android:layout_height="110dp"
        app:layout_constraintLeft_toLeftOf="@id/pos4"
        app:layout_constraintBottom_toBottomOf="@id/pos2"
        app:layout_constraintRight_toRightOf="@id/pos4"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/pos2"
        android:layout_width="100dp"
        android:layout_height="110dp"
        app:layout_constraintRight_toRightOf="@id/pos5"
        app:layout_constraintLeft_toLeftOf="@id/pos5"
        app:layout_constraintBottom_toTopOf="@id/pos5"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/todo"/>


    <ImageView
        android:id="@+id/pos3"
        android:layout_width="100dp"
        android:layout_height="110dp"
        app:layout_constraintRight_toRightOf="@id/pos6"
        app:layout_constraintBottom_toBottomOf="@id/pos2"
        app:layout_constraintLeft_toLeftOf="@id/pos6"
        android:contentDescription="@string/todo"/>


    <ImageView
        android:id="@+id/pos4"
        android:layout_width="100dp"
        android:layout_height="110dp"
        app:layout_constraintLeft_toLeftOf="@id/board"
        app:layout_constraintBottom_toBottomOf="@id/pos5"
        app:layout_constraintRight_toLeftOf="@id/pos5"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/pos5"
        android:layout_width="100dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="@id/board"
        app:layout_constraintRight_toRightOf="@id/board"
        app:layout_constraintLeft_toLeftOf="@id/board"
        app:layout_constraintTop_toTopOf="@id/board"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/pos6"
        android:layout_width="100dp"
        android:layout_height="110dp"
        app:layout_constraintRight_toRightOf="@id/board"
        app:layout_constraintBottom_toBottomOf="@id/pos5"
        app:layout_constraintLeft_toRightOf="@id/pos5"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/todo"/>


    <ImageView
        android:id="@+id/pos7"
        android:layout_width="100dp"
        android:layout_height="110dp"
        app:layout_constraintLeft_toLeftOf="@id/pos4"
        app:layout_constraintBottom_toBottomOf="@id/pos8"
        app:layout_constraintRight_toRightOf="@id/pos4"
        android:contentDescription="@string/todo"/>


    <ImageView
        android:id="@+id/pos8"
        android:layout_width="100dp"
        android:layout_height="110dp"
        app:layout_constraintRight_toRightOf="@id/pos5"
        app:layout_constraintLeft_toLeftOf="@id/pos5"
        app:layout_constraintTop_toBottomOf="@id/pos5"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/pos9"
        android:layout_width="100dp"
        android:layout_height="110dp"
        app:layout_constraintLeft_toLeftOf="@id/pos6"
        app:layout_constraintBottom_toBottomOf="@id/pos8"
        app:layout_constraintRight_toRightOf="@id/pos6"
        android:contentDescription="@string/todo"/>


    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/board"
        android:layout_marginBottom="75dp"
        android:text="@string/reset"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/button_green"/>

</androidx.constraintlayout.widget.ConstraintLayout>
